--- a/main_config.ini
+++ b/main_config.ini
@@ -4,13 +4,13 @@ speed_hack=false
 air_brake=false
 speed_airbrake=1
 god_mode=false
-prefix_adm=| Drobyshev.
+prefix_adm=
 auth_skin=0
-rep_day=11
+rep_day=0
 autologin_acc=false
-bubble_chat=true
+bubble_chat=false
 prefix=
-password_of_script=444444
+password_of_script
 emenu=false
 inf_ammo=false
 password_adm=
@@ -21,7 +21,7 @@ auth_ld=0
 no_bike=false
 car_info=false
 auth_famld=0
-auth_script=true
+auth_script=false
 otv=0
 intInfoCars=30
 count_rep=false
